Adjusted scope of search button line-height to prevent overflow

--- a/src/components/form/search/_search.scss
+++ b/src/components/form/search/_search.scss
@@ -21,13 +21,16 @@
   width: 100%;
   margin-top: unset;
   background: #ccc;
-  line-height: 1;
   text-transform: uppercase;
   font-family: $font-family-caps-bold;
 
   @include breakpoint(menu) {
     width: auto;
   }
+}
+
+.uids-content.uids-search [type="submit"] {
+  line-height: 1;
 }
 
 /////
